# FFmpegDemo

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/niklaus/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_player.cpp
app/src/main/cpp/ffmpegplayer/: Common.h  FFmpegPlayer.cpp  FFmpegPlayer.h  SyncQueue.h
app/src/main/cpp/ffmpegplayer/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  SyncQueue.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/ffmpegplayer/demuxer/: Demuxer.cpp  Demuxer.h
app/src/main/cpp/ffmpegplayer/filter/: AudioFilter.cpp  AudioFilter.h  VideoFilter.cpp  VideoFilter.h
app/src/main/cpp/ffmpegplayer/render/: AudioRender.cpp  AudioRender.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/ffmpegplayer/utils/: ALog.h  JNIUtils.cpp  JNIUtils.h
app/src/main/cpp/includes/ffmpeg/libavutil/: ffversion.h
app/src/main/java/com/niklaus/ffmpegdemo/: MainActivity.java
app/src/main/java/com/niklaus/player/: FFmpegPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/niklaus/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
